添加了日历组件

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 data=[
                         [
                             {title:'一'},
-                            {url:'test/01/index.html',title:'日历'},
+                            {url:'test/01/calendar.html',title:'日历'},
                             {url:'test/02/index.html',title:'canvas时钟'}
                         ]
                 ];
