calendar页面放错了

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Project</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/normanize.css">
-
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 <div class="wrap">
@@ -16,7 +15,7 @@
     var str='',
             data=[
                 [
-                    {title:'一 日期相关部分'},
+                    {title:'一、日期相关部分'},
                     {url:'test/01/calendar.html',title:'日历'},
                 ]
             ];
