--- a/test/01/calendar.html
+++ b/test/01/calendar.html
@@ -13,7 +13,7 @@
     var callback=function(){
         alert('你选择了');
     }
-    var myCalendar=new Calendar($(document.body),true,true,3,100,date,callback);
+    var myCalendar=new Calendar($(document.body),false,true,3,100,date,callback);
 
 </script>
 </body>
