--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 [
                     {title:'一、日期相关部分'},
                     {url:'test/01/calendar.html',title:'日历'},
+                    {url:'test/02/clock.html',title:'时钟球'}
                 ]
             ];
     for(var i=0;i<data.length;i++){
