调整项目存放位置

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             data=[
                 [
                     {title:'一、日期相关部分'},
-                    {url:'test/01/calendar.html',title:'日历'},
-                    {url:'test/02/clock.html',title:'时钟球'}
+                    {url:'test/01/calendar/calendar.html',title:'日历'},
+                    {url:'test/01/clockball/clock.html',title:'时钟球'}
+                ],
+                [
+                    {title:'二、图片相关'},
                 ]
             ];
     for(var i=0;i<data.length;i++){
