--- a/test/01/calendar/calendar.html
+++ b/test/01/calendar/calendar.html
@@ -6,14 +6,14 @@
     <link href="css/calendar.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="../../jquery-1.12.1.min.js"></script>
 <script src="js/calendar.js"></script>
 <script>
     var date=new Date();
     var callback=function(){
         alert('你选择了');
     }
-    var myCalendar=new Calendar($(document.body),false,3,100,date,callback);
+    var myCalendar=new Calendar($(document.body),true,3,100,date,callback);
 
 </script>
 </body>
