--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 ],
                 [
                     {title:'二、图片相关'},
+                    {url:'test/02/carouselFigure/carouselFigure.html',title:'图片轮播图'},
+
                 ]
             ];
     for(var i=0;i<data.length;i++){
