--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     {title:'二、图片相关'},
                     {url:'test/02/carouselFigure/carouselFigure.html',title:'图片轮播图'},
 
-                ]
+                ],
+                    {title:'三、表格相关'},
+                    {url:'test/03/form/form.html',title:'表格验证'},
             ];
     for(var i=0;i<data.length;i++){
         var items=data[i];
