--- a/test/03/form/form.html
+++ b/test/03/form/form.html
@@ -7,31 +7,31 @@
 </head>
 <body>
 <form>
-    <div>
+    <fieldset>
         <span>名称</span>
         <input type="text" id="input1"><br>
         <span class="tip">必填，长度为4-16个字符</span>
-    </div>
-    <div>
+    </fieldset>
+    <fieldset>
         <span>密码</span>
         <input type="password" id="input2"><br>
         <span class="tip">必填，长度为6-16个数字或字母</span>
-    </div>
-    <div>
+    </fieldset>
+    <fieldset>
         <span>密码确认</span>
         <input type="password" id="input3"><br>
         <span class="tip">再次输入密码</span>
-    </div>
-    <div>
+    </fieldset>
+    <fieldset>
         <span>邮箱</span>
         <input type="email" id="input4"><br>
         <span class="tip">example@126.com</span>
-    </div>
-    <div>
+    </fieldset>
+    <fieldset>
         <span>手机</span>
         <input type="text" id="input5"><br>
         <span class="tip">请输入11位手机号</span>
-    </div>
+    </fieldset>
     <button value="验证" type="button">验证</button>
 </form>
 <script src="form.js" type="text/javascript"></script>
