--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 ],
                 [
                     {title:'三、表格相关'},
-                    {url:'test/03/form/form.html',title:'表格验证'}
+                    {url:'test/03/form/form.html',title:'表格验证'},
+                    {url:'test/03/form1/form1.html',title:'表单选项'}
                 ]
             ];
     for(var i=0;i<data.length;i++){
