--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 ],
                 [
                     {title:'二、图片相关'},
-                    {url:'test/02/carouselFigure/carouselFigure.html',title:'图片轮播图'}
+                    {url:'test/02/carouselFigure/carouselFigure.html',title:'图片轮播图'},
+                    {url:'test/02/magnifier/magnifier.html',title:'放大镜'}
 
                 ],
                 [
