表单自动生成

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                 ],
                 [
-                    {title:'三、表格相关'},
-                    {url:'test/03/form/form.html',title:'表格验证'},
+                    {title:'三、表单相关'},
+                    {url:'test/03/form/form.html',title:'表单验证'},
                     {url:'test/03/form1/form1.html',title:'表单选项'}
                 ]
             ];
