--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
                 [
                     {title:'二、图片相关'},
                     {url:'test/02/carouselFigure/carouselFigure.html',title:'图片轮播图'},
-                    {url:'test/02/magnifier/magnifier.html',title:'放大镜'}
+                    {url:'test/02/magnifier/magnifier.html',title:'图片放大镜'}
 
                 ],
                 [
                     {title:'三、表单相关'},
                     {url:'test/03/form/form.html',title:'表单验证'},
                     {url:'test/03/form1/form1.html',title:'表单选项'}
+                    {url:'test/03/form2/form2.html',title:'表单自动生成'}
                 ]
             ];
     for(var i=0;i<data.length;i++){
