--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 [
                     {title:'三、表单相关'},
                     {url:'test/03/form/form.html',title:'表单验证'},
-                    {url:'test/03/form1/form1.html',title:'表单选项'}
+                    {url:'test/03/form1/form1.html',title:'表单选项'},
                     {url:'test/03/form2/form2.html',title:'表单自动生成'}
                 ]
             ];
